# ShastaEdit

./: .gitignore  CMakeLists.txt
share/: MainWindow.ui
src/: AppDefs.h  Application.cpp  Application.h  CMakeLists.txt  CommandLine.cpp  CommandLine.h  Main.cpp  MainWindow.cpp  MainWindow.h  Platform.h  Platform_unix.cpp  StringUtils.h  Types.h  UiLoader.cpp  UiLoader.h
